Better fix with the scrollbar

--- a/app/styles/common/_modals.scss
+++ b/app/styles/common/_modals.scss
@@ -22,7 +22,6 @@
   //border: 0;
   //margin-top:60px;
   //z-index:2000;
-  overflow: visible;
 
   &.modal-long{
     height: 60%;
